--- a/index.html
+++ b/index.html
@@ -16,20 +16,6 @@
         <li>Does Aaron like to climb mountains? : Yes</li>
         <li>Does Aaron have any pets? : No</li>
     </ol>
-
-    <script>
-        var userName = prompt('Welcome to my site, what\'s your name?');
-
-        var mountains = prompt('Does Aaron like to climb mountains?');
-
-        if(mountains === 'yes' || mountains === 'ya'){
-            alert('Nice job, I love climbing mountains');
-        } else if(mountains === 'no'){
-            alert('no way, I love them!');
-        } else {
-            alert('Come on, answer Yes or No');
-        }
-    </script>
-
+<script src="main.js"></script>
 </body>
 </html>
